# sync-it

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README.md.license  flake.lock.license  flake.nix  flake.nix.license
src/: action.rs  cli.rs  cli.yml  config.rs  main.rs  repository.rs  repotype.rs
src/lib/: action.rs  config.rs  group.rs  mod.rs  repository.rs  repotype.rs  run.rs  test.rs
