[package]
name = "sync-it"
version = "1.0.1"
authors = ["Samuel W. Flint <swflint@flintfam.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde = {version = "1.0.116", features = ["derive"]}
clap = {version = "2.33.3", features = ["yaml"]}
yaml-rust = "0.3.5"
home = "0.5.3"
string_template = "0.2.1"
